<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginRegister.MainActivity"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_page"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:id="@+id/lbltxt"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtusername"
            android:layout_below="@+id/lbltxt"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/teal_700"
            android:layout_marginTop="60dp"
            android:hint="@string/hint_username"
            android:drawableRight="@drawable/ic_baseline_person_24"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtpass"
            android:layout_below="@+id/edtusername"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/teal_700"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_baseline_lock_24"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text"
            android:id="@+id/btnlogin"
            android:layout_below="@+id/edtpass"
            android:layout_marginTop="60dp"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_already_account"
            android:id="@+id/txt"
            android:layout_below="@+id/btnlogin"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:id="@+id/txtregister"
            android:layout_below="@+id/btnlogin"
            android:layout_marginLeft="180dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:id="@+id/showcredential"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txtregister"
            android:gravity="center"
            />

    </RelativeLayout>
</ScrollView>